--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Kotlin</string>
+    <string name="app_name">简单漫画</string>
     <string name="tab_one">在线漫画</string>
     <string name="tab_two">漫画列表</string>
     <string name="tab_three">动漫资讯</string>
